welcome.lessons.welcome.array.has271.Has271.scala.error
has271:9: error: value >=- is not a member of Int
          if (nums(i+2)>=-1){
                       ^